# whey80land

./: LICENSE  meson.build
clients/: client.c  client.h  meson.build  simple-client.c
src/: cursor.c  cursor.h  input.c  input.h  main.c  output.c  output.h  server.c  server.h  xdg_shell.c  xdg_shell.h
tests/: meson.build  test_client.c  test_cursor.c  test_input.c  test_output.c  test_simple_client.c  test_xdg_shell.c
